docker_deploy/kubernetes-stellan/examples/john2x-opentaproject-org/yamls-staging/03-ingress-wildcard-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: opentaproject-org-ingress
  namespace: opentaproject-org
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: opentaproject.org
      http:
        paths:
          - path: /
            backend:
              serviceName: wildcard-demo
              servicePort: http
    - host: "*.opentaproject.org"
      http:
        paths:
          - path: /
            backend:
              serviceName: wildcard-demo
              servicePort: http
  #tls:
  #  - secretName: opentaproject-org-staging-certificate-tls
  #    hosts:
  #      - opentaproject.org
  #      - "*.opentaproject.org"
